src/test/deca/context/invalid/personalTests/instanceofInt.deca
class A{
    int a;
}

{
    int a = 10;
    if(a instanceof A){
        println("true");
    }
    else{
        println("false");
    }
}